# xspct_db

./: .gitignore  .reuseignore  CLAUDE.md  README.md  REUSE.toml  bom.json  example-config.yml  pyproject.toml
.github/: copilot-instructions.md
.github/agents/: xspct_db.agent.md
.github/prompts/: check-code.prompt.md  format-code.prompt.md  generate-sbom.prompt.md  prepare-commit.prompt.md  run-tests.prompt.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
docs/: changelog.md  conf.py  index.md  index.rst  license.md
docs/guide/: api.md  configuration.md  development.md  installation.md
docs/reference/: auth.md  auth.rst  cache.md  cache.rst  config.md  config.rst  routes.md  routes.rst  server.md  server.rst  stats.md  stats.rst  utils.md  utils.rst
docs/reference/backends/: base.md  base.rst  delay.md  delay.rst  dummy.md  dummy.rst  index.md  index.rst  ldap_backend.md  ldap_backend.rst  mysql_backend.md  mysql_backend.rst  yaml_backend.md  yaml_backend.rst
src/xspct_db/: __init__.py  __main__.py  auth.py  cache.py  config.py  prefilter.py  rewrite.py  routes.py  schemas.py  server.py  stats.py  utils.py
src/xspct_db/backends/: __init__.py  base.py  delay.py  dummy.py  ldap_backend.py  mysql_backend.py  yaml_backend.py
src/xspct_db/metrics/: __init__.py  handlers.py  loop_lag.py  middleware.py  registry.py
tests/: __init__.py  conftest.py  test_auth.py  test_cache.py  test_prefilter.py  test_rewrite.py  test_routes.py  test_stats.py  test_utils.py
tests/backends/: test_base.py  test_dispatcher.py  test_dummy.py  test_ldap_backend.py  test_mysql_backend.py  test_yaml_backend.py
tests/metrics/: __init__.py  test_handlers.py  test_integration.py  test_loop_lag.py  test_middleware.py
